Fixed styling bug with Navbar not always covering full screen height

--- a/client/src/_App.scss
+++ b/client/src/_App.scss
@@ -3,14 +3,10 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    background-image: url('./assets/overlay-bg.jpg');
-    background-size: 100%;
-    background-position: center;
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
     z-index: -1;
+    background-image: url('./assets/overlay-bg.jpg');
+    background-size: cover;
+    width: 100%;
+    height: 100%;
   }
 }
