--- a/client/src/components/_NavBar.scss
+++ b/client/src/components/_NavBar.scss
@@ -1,6 +1,5 @@
 .navbar {
-  position: relative;
-  float: left;
+  position: fixed;
   height: 100%;
   min-height: 100vh;
   width: 15%;
